# Mia

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build-android.yml  main.yml
apps/: APPS.md
apps/MiaPaint/: .gitignore  README.md  app.cmake
apps/MiaPaint/src/: canvas.c  history.c  main.c  manager.c  mp.c  palette.c  selection.c  surface.c  toolbar.c
apps/MiaStudio/: README.md  app.cmake
apps/examples/: README.md  app.cmake
apps/examples/src/: EXViewOverlay.c  ex.c  ex_00_hello_world.c  ex_01_pointers.c  ex_02_animations.c  ex_03_iui.c  ex_04_widgets.c  ex_05_windows.c  ex_06_fonts.c  ex_07_sound.c  ex_08_xtras.c  ex_09_fetching.c  ex_10_upndownload.c  ex_11_benchmark.c  ex_12_drawing.c  ex_13_mixer.c  ex_14_webcam.c  main.c  tea.c  thunder.c
apps/hello/: app.cmake  main.c
cmake/: platform.cmake  platform_android.cmake  platform_cxxdroid.cmake  platform_emscripten.cmake  platform_linux.cmake  platform_macos.cmake  platform_mingw.cmake  platform_msvc.cmake
doc/: install.md  install_android.md  install_linux.md  install_macos.md  install_windows.md
logo/debug/: template.py
mia/include/: mia.h
mia/include/a/: AScene.h  AView.h  AViewStage.h  a.h  action.h  app.h  common.h  input.h  pointer.h  rumble.h
mia/include/m/: MMat.h  MMat_blit.h  MMat_channel.h  MMat_draw.h  MMat_ex.h  MMat_imgproc.h  MMat_math.h  MMat_palette.h  MMat_view.h  discr.h  format.h  m.h
mia/include/o/: OArchive.h  OArray.h  OArray_raw.h  OCondition.h  OContext.h  ODelcallback.h  ODict.h  OEvent.h  OEventFetch.h  OEventFile.h  OFuture.h  OJoin.h  OJson.h  OList.h  OMap.h  OObj.h  OObjRoot.h  OObj_builder.h  OPattern.h  OPtr.h  OQueue.h  OSocketserver.h  OStream.h  OStreamArray.h  OStreamBuffer.h  OStreamCache.h  OStreamMem.h  OStreamSdl.h  OStreamSocket.h  OTask.h  OThread.h  OThreadpool.h  OTtf.h  OWalkjson.h  OWeakjoin.h  OWebcam.h  allocator.h  array.h  common.h  endian.h  (+12 more)
mia/include/r/: RBuffer.h  RBufferBox.h  RBufferQuad.h  RCam.h  RObj.h  RObjBox.h  RObjGroup.h  RObjQuad.h  RObjText.h  RProgram.h  RShader.h  RShaderBox.h  RShaderBoxIndexed.h  RShaderQuad.h  RShaderQuadChannelmerge.h  RShaderQuadDab.h  RShaderQuadKernel.h  RShaderQuadMerge.h  RShaderQuadOp.h  RTex.h  RTex_blit.h  RTex_channel.h  RTex_color.h  RTex_draw.h  RTex_ex.h  RTex_imgproc.h  RTex_math.h  RTex_text.h  box.h  common.h  gl.h  program.h  proj.h  quad.h  r.h  tex.h  textlayout.h
mia/include/s/: SBuf.h  SFilter.h  SFilterConv.h  SFilterEcho.h  SFilterFade.h  SFilterNormalize.h  SResampler.h  STrack.h  STrackBuf.h  STrackGen.h  STrackMix.h  STrackMono.h  STrackPan.h  STrackResample.h  common.h  ogg.h  s.h  wav.h
mia/include/u/: UAnimator.h  USampler.h  USamplerVec.h  USceneBlur.h  USplit.h  atlas.h  btn.h  color.h  discr.h  frames.h  gradient.h  grid.h  pose.h  rect.h  scroll.h  splash.h  u.h  waveform.h  zoom.h
mia/include/w/: WAlign.h  WBox.h  WBtn.h  WClick.h  WColor.h  WCombo.h  WDrag.h  WFrame.h  WGradient.h  WGrid.h  WIcon.h  WImg.h  WImgPicker.h  WNum.h  WObj.h  WPane.h  WProgress.h  WRestrict.h  WSelect.h  WSlider.h  WStack.h  WStyle.h  WText.h  WTextShadow.h  WTheme.h  WTip.h  WTooltip.h  WView.h  WWindow.h  WWindowDialog.h  w.h
mia/include/x/: XViewDialog.h  XViewFiles.h  XViewKeys.h  XViewLog.h  XViewShell.h  XViewTex.h  XViewText.h  XViewVirtual.h  XWObjColor.h  common.h  cursor.h  dialog.h  gradient.h  iui.h  num.h  terminal.h  toast.h  viewfiles.h  viewtex.h  viewtext.h  viewvirtual.h  x.h
mia/res/r/: Box.glsl  BoxIndexed.glsl  Box__common.glsl  Box__common_frag.glsl  Box_hsva.glsl  Box_rgba.glsl  Quad.glsl  QuadChannelmerge.glsl  QuadDab.glsl  QuadKernel_bloom.glsl  QuadKernel_contour.glsl  QuadKernel_contour_inv.glsl  QuadKernel_conv.glsl  QuadMerge.glsl  QuadMerge_additive.glsl  QuadMerge_subtractive.glsl  QuadOp_min.glsl  Quad__common.glsl  Quad_addscaled.glsl  Quad_hsva_from_rgba.glsl  Quad_hsva_into_rgba.glsl  Quad_mixer.glsl  Quad_rgba.glsl  Quad_rgba_hsva.glsl
mia/src/a/: AScene.c  AView.c  AViewStage.c  a.c  action.c  ad.c  app.c  billing.c  input.c  pointer.c  rumble.c
mia/src/m/: MMat.c  MMat_blit.c  MMat_channel.c  MMat_draw.c  MMat_imgproc.c  MMat_io.c  MMat_math.c  MMat_palette.c  MMat_view.c  discr.c  io_byte.c  io_dbl.c  io_flt.c  io_int.c  m.c
mia/src/o/: OArchive.c  OArchive_microtar.c  OArchive_microtar.h  OArchive_miniz.c  OArchive_miniz.h  OArray.c  OCondition.c  OContext.c  ODelcallback.c  ODict.c  OEvent.c  OEventFetch_android.c  OEventFetch_curl.c  OEventFetch_emscripten.c  OEventFile_emscripten.c  OEventFile_sdl.c  OFuture.c  OJoin.c  OJson.c  OJson_raw.c  OJson_stream.c  OList.c  OMap.c  OObj.c  OPattern.c  OPtr.c  OSocketserver.c  OStream.c  OStreamArray.c  OStreamBuffer.c  OStreamCache.c  OStreamMem.c  OStreamSdl.c  OStreamSocket.c  OTask.c  OThread.c  OThreadpool.c  OTtf.c  OWalkjson.c  OWeakjoin.c  (+14 more)
mia/src/r/: RBuffer.c  RBufferBox.c  RBufferQuad.c  RCam.c  RObjBox.c  RObjGroup.c  RObjQuad.c  RObjText.c  RProgram.c  RShader.c  RShaderBox.c  RShaderBoxIndexed.c  RShaderQuad.c  RShaderQuadChannelMerge.c  RShaderQuadDab.c  RShaderQuadKernel.c  RShaderQuadMerge.c  RShaderQuadOp.c  RTex.c  RTex_L.h  RTex_blit.c  RTex_channel.c  RTex_color.c  RTex_draw.c  RTex_imgproc.c  RTex_math.c  RTex_text.c  box.c  common.c  program.c  proj.c  quad.c  r.c  tex.c  textlayout.c
mia/src/s/: SBuf.c  SFilter.c  SFilterConv.c  SFilterEcho.c  SFilterFade.c  SFilterNormalize.c  SResampler.c  STrack.c  STrackBuf.c  STrackGen.c  STrackMix.c  STrackMono.c  STrackPan.c  STrackResample.c  common.c  ext_stb_vorbis.c  ogg.c  s.c  wav.c
mia/src/u/: UAnimator.c  USampler.c  USamplerVec.c  USceneBlur.c  USplit.c  atlas.c  discr.c  pose.c  scroll.c  splash.c  u.c  waveform.c  zoom.c
mia/src/w/: WAlign.c  WBox.c  WBtn.c  WClick.c  WColor.c  WCombo.c  WDrag.c  WFrame.c  WGradient.c  WGrid.c  WIcon.c  WImg.c  WImgPicker.c  WNum.c  WObj.c  WPane.c  WProgress.c  WRestrict.c  WSelect.c  WSlider.c  WStack.c  WStyle.c  WText.c  WTextShadow.c  WTheme.c  WTip.c  WTooltip.c  WView.c  WWindow.c  WWindowDialog.c  (+1 more)
mia/test/: main_test.c  test.c
web/: thread_server.py
(+132 files in other folders)
